Ensured the last element in the sidenav was always visible to the user

--- a/docs/css/renesas_layout_style.css
+++ b/docs/css/renesas_layout_style.css
@@ -362,6 +362,8 @@ pre {
   transition: 0.3s;
 }
 
+.sidenav a:last-child { height: 100%; }
+
 .sidenav a.active {
   background-color: var(--sidenav-active-background-colour);
   color: var(--sidenav-active-colour);
